tests/slurm/slurm-56154726.out
  File "/home/mdavis/f12eom_optimizer/tests/slurm/f12eom.sh", line 11
    setenv TOP    /home/qc/
             ^
SyntaxError: invalid syntax
